src/c/dynamics.h

/**
 * @brief One Denavit-Hartenberg parameter set.
 */
typedef struct
{
    /**
     * Link length parameter.
    */
    double link_length;
    /**
     * Link twist parameter.
    */
    double link_twist;
    /**
     * Link offset parameter.
    */
    double link_offset;
    /**
     * Joint angle parameter.
    */
    double joint_angle;
} c_dh_parameter_set;
/**
 * @brief A dynamically allocated Denavit-Hartenberg table.
 */
typedef struct
{
    /**
     * Number of parameter sets in the table.
    */
    int count;
    /**
     * Dynamically allocated parameter-set array.
    */
    c_dh_parameter_set *parameters;
} c_dh_table;
/**
 * Compute forward kinematics from a Denavit-Hartenberg table.
 * @param tbl Parameter table.
 * @param T Output transform.
 * @param ldt Leading dimension of T.
 */
void c_dh_forward_kinematics_table(const c_dh_table *tbl, double *T, int ldt);
/**
 * Compute serial Denavit-Hartenberg forward kinematics.
 * @param n Number of joints.
 * @param alpha Link twists.
 * @param a Link lengths.
 * @param theta Joint angles.
 * @param d Link offsets.
 * @param T Output transform.
 * @param ldt Leading dimension of T.
 */
void c_dh_forward_kinematics(int n, const double *alpha, const double *a,
    const double *theta, const double *d, double *T, int ldt);
/**
 * Multiply two homogeneous transforms.
 * @param T1 First transform.
 * @param ldt1 Leading dimension of T1.
 * @param T2 Second transform.
 * @param ldt2 Leading dimension of T2.
 * @param T Output transform.
 * @param ldt Leading dimension of T.
 */
void c_dh_forward_kinematics_2(const double *T1, int ldt1, const double *T2,
    int ldt2, double *T, int ldt);
/**
 * Multiply three homogeneous transforms.
 * @param T1 First transform.
 * @param ldt1 Leading dimension of T1.
 * @param T2 Second transform.
 * @param ldt2 Leading dimension of T2.
 * @param T3 Third transform.
 * @param ldt3 Leading dimension of T3.
 * @param T Output transform.
 * @param ldt Leading dimension of T.
 */
void c_dh_forward_kinematics_3(const double *T1, int ldt1, const double *T2,
    int ldt2, const double *T3, int ldt3, double *T, int ldt);
/**
 * Multiply four homogeneous transforms. Arguments follow
 * c_dh_forward_kinematics_3 and add T4/ldt4.
 */
void c_dh_forward_kinematics_4(const double *T1, int ldt1, const double *T2,
    int ldt2, const double *T3, int ldt3, const double *T4, double *T, int ldt);
/**
 * Multiply five homogeneous transforms. Arguments follow
 * c_dh_forward_kinematics_3 and add T4/ldt4 and T5/ldt5.
 */
void c_dh_forward_kinematics_5(const double *T1, int ldt1, const double *T2,
    int ldt2, const double *T3, int ldt3, const double *T4, int ldt4,
    const double *T5, int ldt5, double *T, int ldt);
/**
 * Multiply six homogeneous transforms. Arguments follow
 * c_dh_forward_kinematics_3 and add T4/ldt4, T5/ldt5, and T6/ldt6.
 */
void c_dh_forward_kinematics_6(const double *T1, int ldt1, const double *T2,
    int ldt2, const double *T3, int ldt3, const double *T4, int ldt4,
    const double *T5, int ldt5, const double *T6, int ldt6, double *T, int ldt);
/**
 * Multiply seven homogeneous transforms. Arguments follow
 * c_dh_forward_kinematics_3 and add T4/ldt4 through T7/ldt7.
 */
void c_dh_forward_kinematics_7(const double *T1, int ldt1, const double *T2,
    int ldt2, const double *T3, int ldt3, const double *T4, int ldt4,
    const double *T5, int ldt5, const double *T6, int ldt6, const double *T7,
    int ldt7, double *T, int ldt);
/**
 * Multiply eight homogeneous transforms. Arguments follow
 * c_dh_forward_kinematics_3 and add T4/ldt4 through T8/ldt8.
 */
void c_dh_forward_kinematics_8(const double *T1, int ldt1, const double *T2,
    int ldt2, const double *T3, int ldt3, const double *T4, int ldt4,
    const double *T5, int ldt5, const double *T6, int ldt6, const double *T7,
    int ldt7, const double *T8, int ldt8, double *T, int ldt);
/**
 * Compute a Denavit-Hartenberg linkage Jacobian.
 * @param n Joint count.
 * @param alpha Link twists.
 * @param a Link lengths.
 * @param theta Joint angles.
 * @param d Link offsets.
 * @param jtypes Joint types.
 * @param jac Output Jacobian.
 * @param ldjac Leading dimension of jac.
 */
void c_dh_jacobian(int n, const double *alpha, const double *a, 
    const double *theta, const double *d, const int *jtypes, double *jac,
    int ldjac);
/**
 * Build one Denavit-Hartenberg homogeneous transform.
 * @param alpha Link twist.
 * @param a Link length.
 * @param theta Joint angle.
 * @param d Link offset.
 * @param T Output transform.
 * @param ldt Leading dimension of T.
 */
void c_dh_matrix(double alpha, double a, double theta, double d, double *T,
    int ldt);
/**
 * Build the Denavit-Hartenberg x-axis rotation matrix.
 * @param alpha Rotation angle.
 * @param T Output matrix.
 * @param ldt Leading dimension of T.
 */
void c_dh_rotate_x(double alpha, double *T, int ldt);
/**
 * Build the Denavit-Hartenberg z-axis rotation matrix.
 * @param theta Rotation angle.
 * @param T Output matrix.
 * @param ldt Leading dimension of T.
 */
void c_dh_rotate_z(double theta, double *T, int ldt);