src/c/dynamics_c_kinematics.f90

module dynamics_c_kinematics
    use iso_c_binding
    use iso_fortran_env
    use dynamics
    use diffeq
    use spectrum, only : window
    use dynamics_error_handling
    use nonlin
    use dynamics_c_types
    implicit none

contains

subroutine c_dh_forward_kinematics_table(tbl, T, ldt) &
    bind(C, name = "c_dh_forward_kinematics_table")
    type(c_dh_table), intent(in) :: tbl
    integer(c_int), intent(in), value :: ldt
    real(c_double), intent(out) :: T(ldt, 4)
    type(dh_table) :: ftbl
    if (ldt < 4) error stop DYN_INVALID_INPUT_ERROR
    ftbl = tbl
    T(1:4,1:4) = dh_forward_kinematics(ftbl)
end subroutine

! ------------------------------------------------------------------------------
subroutine c_dh_forward_kinematics(n, alpha, a, theta, d, T, ldt) &
    bind(C, name = "c_dh_forward_kinematics")
    integer(c_int), intent(in), value :: n
    real(c_double), intent(in) :: alpha(n)
    real(c_double), intent(in) :: a(n)
    real(c_double), intent(in) :: theta(n)
    real(c_double), intent(in) :: d(n)
    integer(c_int), intent(in), value :: ldt
    real(c_double), intent(out) :: T(ldt,4)
    if (ldt < 4) error stop DYN_INVALID_INPUT_ERROR
    T(1:4,1:4) = dh_forward_kinematics(alpha, a, theta, d)
end subroutine

! ------------------------------------------------------------------------------
subroutine c_dh_forward_kinematics_2(T1, ldt1, T2, ldt2, T, ldt) &
    bind(C, name = "c_dh_forward_kinematics_2")
    integer(c_int), intent(in), value :: ldt1
    integer(c_int), intent(in), value :: ldt2
    integer(c_int), intent(in), value :: ldt
    real(c_double), intent(in) :: T1(ldt1,4)
    real(c_double), intent(in) :: T2(ldt2,4)
    real(c_double), intent(out) :: T(ldt,4)
    if (ldt1 < 4) error stop DYN_INVALID_INPUT_ERROR
    if (ldt2 < 4) error stop DYN_INVALID_INPUT_ERROR
    if (ldt < 4) error stop DYN_INVALID_INPUT_ERROR
    T(1:4,1:4) = dh_forward_kinematics(T1(1:4,1:4), T2(1:4,1:4))
end subroutine

! ------------------------------------------------------------------------------
subroutine c_dh_forward_kinematics_3(T1, ldt1, T2, ldt2, T3, ldt3, T, ldt) &
    bind(C, name = "c_dh_forward_kinematics_3")
    integer(c_int), intent(in), value :: ldt1
    integer(c_int), intent(in), value :: ldt2
    integer(c_int), intent(in), value :: ldt3
    integer(c_int), intent(in), value :: ldt
    real(c_double), intent(in) :: T1(ldt1,4)
    real(c_double), intent(in) :: T2(ldt2,4)
    real(c_double), intent(in) :: T3(ldt3,4)
    real(c_double), intent(out) :: T(ldt,4)
    if (ldt1 < 4) error stop DYN_INVALID_INPUT_ERROR
    if (ldt2 < 4) error stop DYN_INVALID_INPUT_ERROR
    if (ldt3 < 4) error stop DYN_INVALID_INPUT_ERROR
    if (ldt < 4) error stop DYN_INVALID_INPUT_ERROR
    T(1:4,1:4) = dh_forward_kinematics(T1(1:4,1:4), T2(1:4,1:4), T3(1:4,1:4))
end subroutine

! ------------------------------------------------------------------------------
subroutine c_dh_forward_kinematics_4(T1, ldt1, T2, ldt2, T3, ldt3, T4, ldt4, &
    T, ldt) &
    bind(C, name = "c_dh_forward_kinematics_4")
    integer(c_int), intent(in), value :: ldt1
    integer(c_int), intent(in), value :: ldt2
    integer(c_int), intent(in), value :: ldt3
    integer(c_int), intent(in), value :: ldt4
    integer(c_int), intent(in), value :: ldt
    real(c_double), intent(in) :: T1(ldt1,4)
    real(c_double), intent(in) :: T2(ldt2,4)
    real(c_double), intent(in) :: T3(ldt3,4)
    real(c_double), intent(in) :: T4(ldt4,4)
    real(c_double), intent(out) :: T(ldt,4)
    if (ldt1 < 4) error stop DYN_INVALID_INPUT_ERROR
    if (ldt2 < 4) error stop DYN_INVALID_INPUT_ERROR
    if (ldt3 < 4) error stop DYN_INVALID_INPUT_ERROR
    if (ldt4 < 4) error stop DYN_INVALID_INPUT_ERROR
    if (ldt < 4) error stop DYN_INVALID_INPUT_ERROR
    T(1:4,1:4) = dh_forward_kinematics(T1(1:4,1:4), T2(1:4,1:4), T3(1:4,1:4), &
        T4(1:4,1:4))
end subroutine

! ------------------------------------------------------------------------------
subroutine c_dh_forward_kinematics_5(T1, ldt1, T2, ldt2, T3, ldt3, T4, ldt4, &
    T5, ldt5, T, ldt) &
    bind(C, name = "c_dh_forward_kinematics_5")
    integer(c_int), intent(in), value :: ldt1
    integer(c_int), intent(in), value :: ldt2
    integer(c_int), intent(in), value :: ldt3
    integer(c_int), intent(in), value :: ldt4
    integer(c_int), intent(in), value :: ldt5
    integer(c_int), intent(in), value :: ldt
    real(c_double), intent(in) :: T1(ldt1,4)
    real(c_double), intent(in) :: T2(ldt2,4)
    real(c_double), intent(in) :: T3(ldt3,4)
    real(c_double), intent(in) :: T4(ldt4,4)
    real(c_double), intent(in) :: T5(ldt5,4)
    real(c_double), intent(out) :: T(ldt,4)
    if (ldt1 < 4) error stop DYN_INVALID_INPUT_ERROR
    if (ldt2 < 4) error stop DYN_INVALID_INPUT_ERROR
    if (ldt3 < 4) error stop DYN_INVALID_INPUT_ERROR
    if (ldt4 < 4) error stop DYN_INVALID_INPUT_ERROR
    if (ldt5 < 4) error stop DYN_INVALID_INPUT_ERROR
    if (ldt < 4) error stop DYN_INVALID_INPUT_ERROR
    T(1:4,1:4) = dh_forward_kinematics(T1(1:4,1:4), T2(1:4,1:4), T3(1:4,1:4), &
        T4(1:4,1:4), T5(1:4,1:4))
end subroutine

! ------------------------------------------------------------------------------
subroutine c_dh_forward_kinematics_6(T1, ldt1, T2, ldt2, T3, ldt3, T4, ldt4, &
    T5, ldt5, T6, ldt6, T, ldt) &
    bind(C, name = "c_dh_forward_kinematics_6")
    integer(c_int), intent(in), value :: ldt1
    integer(c_int), intent(in), value :: ldt2
    integer(c_int), intent(in), value :: ldt3
    integer(c_int), intent(in), value :: ldt4
    integer(c_int), intent(in), value :: ldt5
    integer(c_int), intent(in), value :: ldt6
    integer(c_int), intent(in), value :: ldt
    real(c_double), intent(in) :: T1(ldt1,4)
    real(c_double), intent(in) :: T2(ldt2,4)
    real(c_double), intent(in) :: T3(ldt3,4)
    real(c_double), intent(in) :: T4(ldt4,4)
    real(c_double), intent(in) :: T5(ldt5,4)
    real(c_double), intent(in) :: T6(ldt6,4)
    real(c_double), intent(out) :: T(ldt,4)
    if (ldt1 < 4) error stop DYN_INVALID_INPUT_ERROR
    if (ldt2 < 4) error stop DYN_INVALID_INPUT_ERROR
    if (ldt3 < 4) error stop DYN_INVALID_INPUT_ERROR
    if (ldt4 < 4) error stop DYN_INVALID_INPUT_ERROR
    if (ldt5 < 4) error stop DYN_INVALID_INPUT_ERROR
    if (ldt6 < 4) error stop DYN_INVALID_INPUT_ERROR
    if (ldt < 4) error stop DYN_INVALID_INPUT_ERROR
    T(1:4,1:4) = dh_forward_kinematics(T1(1:4,1:4), T2(1:4,1:4), T3(1:4,1:4), &
        T4(1:4,1:4), T5(1:4,1:4), T6(1:4,1:4))
end subroutine

! ------------------------------------------------------------------------------
subroutine c_dh_forward_kinematics_7(T1, ldt1, T2, ldt2, T3, ldt3, T4, ldt4, &
    T5, ldt5, T6, ldt6, T7, ldt7, T, ldt) &
    bind(C, name = "c_dh_forward_kinematics_7")
    integer(c_int), intent(in), value :: ldt1
    integer(c_int), intent(in), value :: ldt2
    integer(c_int), intent(in), value :: ldt3
    integer(c_int), intent(in), value :: ldt4
    integer(c_int), intent(in), value :: ldt5
    integer(c_int), intent(in), value :: ldt6
    integer(c_int), intent(in), value :: ldt7
    integer(c_int), intent(in), value :: ldt
    real(c_double), intent(in) :: T1(ldt1,4)
    real(c_double), intent(in) :: T2(ldt2,4)
    real(c_double), intent(in) :: T3(ldt3,4)
    real(c_double), intent(in) :: T4(ldt4,4)
    real(c_double), intent(in) :: T5(ldt5,4)
    real(c_double), intent(in) :: T6(ldt6,4)
    real(c_double), intent(in) :: T7(ldt7,4)
    real(c_double), intent(out) :: T(ldt,4)
    if (ldt1 < 4) error stop DYN_INVALID_INPUT_ERROR
    if (ldt2 < 4) error stop DYN_INVALID_INPUT_ERROR
    if (ldt3 < 4) error stop DYN_INVALID_INPUT_ERROR
    if (ldt4 < 4) error stop DYN_INVALID_INPUT_ERROR
    if (ldt5 < 4) error stop DYN_INVALID_INPUT_ERROR
    if (ldt6 < 4) error stop DYN_INVALID_INPUT_ERROR
    if (ldt7 < 4) error stop DYN_INVALID_INPUT_ERROR
    if (ldt < 4) error stop DYN_INVALID_INPUT_ERROR
    T(1:4,1:4) = dh_forward_kinematics(T1(1:4,1:4), T2(1:4,1:4), T3(1:4,1:4), &
        T4(1:4,1:4), T5(1:4,1:4), T6(1:4,1:4), T7(1:4,1:4))
end subroutine

! ------------------------------------------------------------------------------
subroutine c_dh_forward_kinematics_8(T1, ldt1, T2, ldt2, T3, ldt3, T4, ldt4, &
    T5, ldt5, T6, ldt6, T7, ldt7, T8, ldt8, T, ldt) &
    bind(C, name = "c_dh_forward_kinematics_8")
    integer(c_int), intent(in), value :: ldt1
    integer(c_int), intent(in), value :: ldt2
    integer(c_int), intent(in), value :: ldt3
    integer(c_int), intent(in), value :: ldt4
    integer(c_int), intent(in), value :: ldt5
    integer(c_int), intent(in), value :: ldt6
    integer(c_int), intent(in), value :: ldt7
    integer(c_int), intent(in), value :: ldt8
    integer(c_int), intent(in), value :: ldt
    real(c_double), intent(in) :: T1(ldt1,4)
    real(c_double), intent(in) :: T2(ldt2,4)
    real(c_double), intent(in) :: T3(ldt3,4)
    real(c_double), intent(in) :: T4(ldt4,4)
    real(c_double), intent(in) :: T5(ldt5,4)
    real(c_double), intent(in) :: T6(ldt6,4)
    real(c_double), intent(in) :: T7(ldt7,4)
    real(c_double), intent(in) :: T8(ldt8,4)
    real(c_double), intent(out) :: T(ldt,4)
    if (ldt1 < 4) error stop DYN_INVALID_INPUT_ERROR
    if (ldt2 < 4) error stop DYN_INVALID_INPUT_ERROR
    if (ldt3 < 4) error stop DYN_INVALID_INPUT_ERROR
    if (ldt4 < 4) error stop DYN_INVALID_INPUT_ERROR
    if (ldt5 < 4) error stop DYN_INVALID_INPUT_ERROR
    if (ldt6 < 4) error stop DYN_INVALID_INPUT_ERROR
    if (ldt7 < 4) error stop DYN_INVALID_INPUT_ERROR
    if (ldt8 < 4) error stop DYN_INVALID_INPUT_ERROR
    if (ldt < 4) error stop DYN_INVALID_INPUT_ERROR
    T(1:4,1:4) = dh_forward_kinematics(T1(1:4,1:4), T2(1:4,1:4), T3(1:4,1:4), &
        T4(1:4,1:4), T5(1:4,1:4), T6(1:4,1:4), T7(1:4,1:4), T8(1:4,1:4))
end subroutine

! ------------------------------------------------------------------------------
subroutine c_dh_jacobian(n, alpha, a, theta, d, jtypes, jac, ldjac) &
    bind(C, name = "c_dh_jacobian")
    integer(c_int), intent(in), value :: n
    integer(c_int), intent(in), value :: ldjac
    real(c_double), intent(in) :: alpha(n)
    real(c_double), intent(in) :: a(n)
    real(c_double), intent(in) :: theta(n)
    real(c_double), intent(in) :: d(n)
    integer(c_int), intent(in) :: jtypes(n)
    real(c_double), intent(out) :: jac(ldjac,n)
    if (ldjac < 6) error stop DYN_INVALID_INPUT_ERROR
    jac(1:6,1:n) = dh_jacobian(alpha, a, theta, d, jtypes)
end subroutine

! ------------------------------------------------------------------------------
subroutine c_dh_matrix(alpha, a, theta, d, T, ldt) &
    bind(C, name = "c_dh_matrix")
    real(c_double), intent(in), value :: alpha
    real(c_double), intent(in), value :: a
    real(c_double), intent(in), value :: theta
    real(c_double), intent(in), value :: d
    integer(c_int), intent(in), value :: ldt
    real(c_double), intent(out) :: T(ldt,4)
    if (ldt < 4) error stop DYN_INVALID_INPUT_ERROR
    T(1:4,1:4) = dh_matrix(alpha, a, theta, d)
end subroutine

! ------------------------------------------------------------------------------
subroutine c_dh_rotate_x(alpha, T, ldt) &
    bind(C, name = "c_dh_rotate_x")
    real(c_double), intent(in), value :: alpha
    integer(c_int), intent(in), value :: ldt
    real(c_double), intent(out) :: T(ldt,4)
    if (ldt < 4) error stop DYN_INVALID_INPUT_ERROR
    T(1:4,1:4) = dh_rotate_x(alpha)
end subroutine

! ------------------------------------------------------------------------------
subroutine c_dh_rotate_z(theta, T, ldt) &
    bind(C, name = "c_dh_rotate_z")
    real(c_double), intent(in), value :: theta
    integer(c_int), intent(in), value :: ldt
    real(c_double), intent(out) :: T(ldt,4)
    if (ldt < 4) error stop DYN_INVALID_INPUT_ERROR
    T(1:4,1:4) = dh_rotate_z(theta)
end subroutine
